# c-linked-list-demo

./: CMakeLists.txt  doubly-linked-list.c  doubly-linked-list.h  linked-list.h  main.c  singly-linked-list.c  singly-linked-list.h
src/: CMakeLists.txt  doubly-linked-list.c  main.c  singly-linked-list.c
tests/: CMakeLists.txt  test_doubly_linked_list.c  test_singly_linked_list.c
